ChangeLog

18 Jul 2020: Release v1.1.7  doi:10.5281/zenodo.3951242

10 Jul 2020: merged psv + psv2 + psv3, and changed default parameterization to psv2.

2 Jul 2020: renamed Exosphere/ into Exospheres/

29 Jun 2020: added basic lunar ice pump code to Lunar/. Lunar/ is a new directory that will contain miscellaneous model code for the Moon. The lunar exosphere model will stay in Exosphere/ and the 3D terrain irradiance model will stay in Topo3D/.

21 Jun 2020: added subl_h2o, although for now it's an orphan.

27 May 2020: changed psv3, added psv2 (parametrizations for saturation vapor pressure)

22 May 2020: added patm as input to Mars/jsubv; changed default hemispheric Tco2frost temperatures

May 2020: Re-calculated mean annual surface temperatures on Mars over 21 Myr and added them to the archive under Mars/MilankOutput/

16 May 2020: flux -> flux_mars77 in jsubv. This was the last occurrence of the function flux, and the legendary function flux was removed from the collection. It is superseded by subroutine mars_flux2, which provides a consistent treatment of the sky irradiance for an obstructed sky. For horizontal and unobstructed ground flux_mars77 can be used.

In this process, I realized that different parts of the program collection used different conventions for the slope orientation. In functions flux and flux_noatm, zero slope azimuth meant north-facing; in flux_mars2 and flux_wshad zero slope azimuth meant south-facing. With function flux gone, the convention in flux_noatm was changed. Now zero slope azimuth uniformly means south-facing (the azimuth of the direction of steepest decent).

May 2020: dusted off mars_mapiqh2v, renamed it to mars_mapi2p, and added example output in Test/

24/25 Apr 2020: revised the type of body parameters in fast_modules_asteroid, so asteroid_fast? can be more easily used with other bodies.
