@@ -1,0 +1,15 @@
+   0.00 -75.000  0.198  129.1   196.3      0.0286
+   0.00 -65.000  0.169  198.3   195.6      0.0939
+   0.00 -55.000  0.158  292.7   195.3      0.4438
+   0.00 -45.000  0.168  267.9   195.1  -9999.0000
+   0.00 -35.000  0.159  244.6   194.3  -9999.0000
+   0.00 -25.000  0.160  251.2   195.0  -9999.0000
+   0.00 -15.000  0.186  220.5   196.4  -9999.0000
+   0.00  -5.000  0.217  186.2   198.3  -9999.0000
+   0.00   5.000  0.250  176.7   199.9  -9999.0000
+   0.00  15.000  0.253  169.1   200.5  -9999.0000
+   0.00  25.000  0.246  160.4   200.6  -9999.0000
+   0.00  35.000  0.236  162.8   200.5  -9999.0000
+   0.00  45.000  0.215  205.5   199.6  -9999.0000
+   0.00  55.000  0.175  247.1   200.2      0.2845
+   0.00  65.000  0.186  268.1   201.2      0.1116
