@@ -24,7 +24,7 @@ program mars_mapii
   zacc = 0.1  ! desired min. relative accuracy of ice table depth
   patm = 600.
   
-  print *,'RUNNING MARS_MAP-ICE TABLE'
+  print *,'RUNNING MARS_MAPII - EQUILIBRIUM ICE TABLE VIA ITERATION'
   write(*,*) 'Global model parameters'
   write(*,*) 'nz=',nz,' zfac=',zfac,' dt=',dt
   write(*,*) 'fracIR=',fracIR,' fracDust=',fracDust
