@@ -1,5 +1,9 @@
 ChangeLog
 
+Jan 2021: added mars_mapii, which has the same functionality as mars_mapi, but uses simple iterations to calculate the equilibrium ice table depth instead of the bisection method. Both use the thermal model in jsub.
+
+Jan 2021: replaced many array allocations of static length NMAX with user-defined length NZ.
+
 18 Jul 2020: Release v1.1.7  doi:10.5281/zenodo.3951242
 
 10 Jul 2020: merged psv + psv2 + psv3, and changed default parameterization to psv2.
